--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1418,6 +1418,7 @@
             $(".timezone-error").html("");
             $(".timezone-warning").html("");
             assembleContent.demo({{ person.id }},true, $(this), true);
+            fillViews.timezone();
         });
     });
     {% endif %}
