--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -964,6 +964,15 @@ div.right-panel {
   display: inline-block;
   min-height: 1.2em;
 }
+#manualEntryModal {
+  input[type='radio'] {
+    margin-top: 4px;
+    margin-left: -20px;
+  }
+  .modal-title {
+    margin: 0.5em;
+  }
+}
 #patientsInstrumentListWrapper {
   position: relative;
   padding: 0.6em 0 0.3em 0;
