fix password label location on registration form

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -2994,7 +2994,7 @@ fieldset[disabled] .btn-google.active {
   background-color: #fff;
 }
 #createAcctTxt {
-  margin: 0.5em 0;
+  margin: 2em 0 0.5em 0;
 }
 .btn-social-container {
   width: 400px;
