--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2999,7 +2999,7 @@ div.timezone-warning.text-warning {
 .btn-google .badge{color:#dd4b39;background-color:#fff}
 
 #createAcctTxt {
-  margin: 0.5em 0;
+  margin: 2em 0 0.5em 0;
 }
 .btn-social-container {
   width: 400px;
