--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2847,6 +2847,9 @@ div.timezone-warning.text-warning {
   max-width: 100%;
   margin: 0 auto;
 }
+#createAcctTxt {
+  margin: 2em 0 0.5em 0;
+}
 #socialMediaRegistrationContainer .btn-social,
 #regForm input[type="submit"],
 #socialMediaLoginContainer .btn-social,
