enforce UI check for existence of organization for staff

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -717,6 +717,9 @@
                     };
                 });
             {%- endif -%}
+            {%- if (person and (person.has_role(ROLE.STAFF) or person.has_role(ROLE.STAFF_ADMIN))) -%}
+                $("#userOrgs .noOrg-container").hide();
+            {%- endif -%}
         };
     </script>
 {%- endmacro %}
