refactor and incorporate call to API for show/hide optional sections

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1423,6 +1423,7 @@ div.right-panel {
 }
 #mainDiv.profile .profile-item-container .view-container {
   display: block;
+  position: relative;
 }
 #mainDiv.profile .profile-item-container .view-container td {
   padding: 0.6em 1em;
@@ -1432,6 +1433,18 @@ div.right-panel {
   vertical-align: top;
 }
 #aboutForm .view-container {
+  display: none;
+}
+#mainDiv.profile .profile-item-loader {
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  width: 98%;
+  height: 98%;
+  padding: 8%;
+  background-color: #FFF;
+  opacity: 0.3;
+  z-index: 21;
   display: none;
 }
 #mainDiv.profile .profile-item-container.edit .view-container {
@@ -1512,6 +1525,11 @@ div.right-panel {
 }
 #userIndigenousStatusContainer .radio label {
   margin-bottom: 4px;
+  margin-left: 4px;
+}
+#userIndigenousStatusContainer input,
+#userIndigenousStatusContainer label {
+  margin-left: 6px;
 }
 #userOrgs {
   font-size: 0.95em;
