--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1343,6 +1343,18 @@ h4.detail-title {
 #mainDiv.profile .profile-item-container.edit .view-container {
   display: none;
 }
+#mainDiv.profile .profile-item-loader {
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  width: 98%;
+  height: 98%;
+  padding: 8%;
+  background-color: #FFF;
+  opacity: 0.3;
+  z-index: 21;
+  display: none;
+}
 .profile-item-title {
   color: #5b5e61;
   margin-bottom: 1.5em;
