--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -132,7 +132,7 @@
 
 {% macro profileIndigenous(person) -%}
     {%- if person and person.org_coding_display_options.indigenous -%}
-        <div id="userIndigenousStatusContainer" data-section-id="indigenous" class="flex-item optional"></div>
+        <div id="userIndigenousStatusContainer" data-section-id="indigenous" class="flex-item"></div>
         <script>
         $(function () {
             (function() {
@@ -1711,7 +1711,7 @@
                             <tr class="gender-view"><td class="text-muted">{{_("Gender")}}</td><td><div id="gender_view"></div></td></tr>
                             <tr id="ethnicityViewRow" data-section-id="ethnicity" class="ethnicity-view optional"><td class="text-muted">{{_("Ethnicity")}}</td><td><div id="ethnicity_view"></div></td></tr>
                             <tr id="raceViewRow" data-section-id="race" class="race-view optional"><td class="text-muted">{{_("Race")}}</td><td><div id="race_view"></div></td></tr>
-                            <tr id="indigenousViewRow" data-section-id="indigenous" class="indigenous-view optional"><td class="text-muted">{{_("Indigenous")}}</td><td><div id="indigenous_view"></div></td></tr>
+                            <tr id="indigenousViewRow" data-section-id="indigenous" class="indigenous-view"><td class="text-muted">{{_("Indigenous")}}</td><td><div id="indigenous_view"></div></td></tr>
                        </table>
                     </div>
                     <div class="flex edit-container">
@@ -1720,6 +1720,7 @@
                         {{profileRace(person)|show_macro('race')}}
                         {{profileIndigenous(person)|show_macro('indigenous')}}
                     </div>
+                    <div class="no-data-container"></div>
                 </div>
             </div>
         </div>
@@ -1848,7 +1849,7 @@
                             <tr class="gender-view"><td class="text-muted">{{_("Gender")}}</td><td><div id="gender_view"></div></td></tr>
                             <tr data-section-id="ethnicity" class="ethnicity-view optional"><td class="text-muted">{{_("Ethnicity")}}</td><td><div id="ethnicity_view"></div></td></tr>
                             <tr data-section-id="race" class="race-view optional"><td class="text-muted">{{_("Race")}}</td><td><div id="race_view"></div></td></tr>
-                            <tr data-section-id="indigenous" class="indigenous-view optional"><td class="text-muted">{{_("Indigenous")}}</td><td><div id="indigenous_view"></div></td></tr>
+                            <tr data-section-id="indigenous" class="indigenous-view"><td class="text-muted">{{_("Indigenous")}}</td><td><div id="indigenous_view"></div></td></tr>
                        </table>
                     </div>
                     <div class="flex edit-container">
@@ -1857,6 +1858,7 @@
                         {{profileRace(person)|show_macro('race')}}
                         {{profileIndigenous(person)|show_macro('indigenous')}}
                     </div>
+                    <div class="no-data-container"></div>
                 </div>
             </div>
         </div>
