--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -101,7 +101,7 @@
                    <th data-field="phone" data-sortable="true" data-visible="false" data-width="10%" data-class="phone-field">{{ _("Cell") }}</th>
                   <th data-field="altPhone" data-sortable="true" data-visible="false" data-width="10%" data-class="altPhone-field">{{ _("Phone (Other)") }}</th>
                   {% if 'reports' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="staff_html" data-sortable="true" data-class="reports-field">{{ _("Reports") }}</th>{% endif %}
-                  {% if 'status' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="status" data-sortable="false" data-card-visible="false" data-searchable="false" data-width="5%" data-class="status-field">{{ _("Questionnaire Status") }}</th>{% endif %}
+                  {% if 'status' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="status" data-sortable="true" data-card-visible="false" data-searchable="true" data-width="5%" data-class="status-field">{{ _("Questionnaire Status") }}</th>{% endif %}
                   {% if 'study_id' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="study_id" data-sortable="true" data-searchable="true" data-class="study-id-field">{{ _("Study ID") }}</th>{% endif %}
                   <th data-field="consentdate" data-sortable="true" data-card-visible="false" data-searchable="false" data-class="consentdate-field text-center">{{_("Consent Date (GMT)")}}</th>
                   <th data-field="organization" data-sortable="true" data-class="organization-field">{{ _("Site(s)") }}</th>
@@ -122,14 +122,14 @@
                         <td class="rowlink-skip">{{ patient.staff_html() | safe }}{% for doc in patient.documents.filter_by(document_type='PatientReport') | sort(attribute='id') %}<div><a title="Download" href="{{ url_for('user_api.download_user_document', user_id=patient.id, doc_id=doc.id) }}">{{ doc.filename }}</a></div>{% endfor %}</td>
                       {% endif %}
                       {% if 'status' in config.PATIENT_LIST_ADDL_FIELDS %}
-                        <td>{%if patient.assessment_status and patient.assessment_status != "undetermined"%}{{ patient.assessment_status }}{% endif%}</td>
+                        <td>{%- if patient.valid_consents and not patient.valid_consents[0].send_reminders -%} Withdrawn {%-else-%}{{patient.assessment_status if patient.assessment_status}}{%-endif-%}</td>
                       {% endif %}
                       {% if 'study_id' in config.PATIENT_LIST_ADDL_FIELDS %}
                         <td>{%if patient.external_study_id%}{{ patient.external_study_id }}{%endif%}</td>
                       {% endif %}
                       <td>{%- if patient.valid_consents -%}
                         {%-for consent in patient.valid_consents -%}
-                          <span class="raw-consent-date tnth-hide">{{consent.audit.timestamp}}</span><br/>
+                          {{consent.audit.timestamp.strftime('%-d %b %Y')}}<br/>
                         {%-endfor-%}
                       {%-endif-%}
                       </td>
@@ -156,7 +156,10 @@ var AT = new AdminTool({{user.id}});
 
 $(document).ready(function() {
 
-  $("#adminTable").on("sort.bs.table reset-view.bs.table", function() {
+  /*****************
+  //client side update of data
+  //keep this here, in case we need to bring this back
+  $("#adminTable").on("sort.bs.table reset-view.bs.table", function(e, fieldname) {
       AT.updateData();
    });
   $("#adminTable").on("page-change.bs.table", function() {
@@ -171,6 +174,9 @@ $(document).ready(function() {
       }
   });
   setTimeout("AT.updateData();", 0);
+  ******************/
+
+   AT.fadeLoader();
   
   $(".tnth-admin-table").bootstrapTable({
     formatShowingRows: function (pageFrom, pageTo, totalRows) {
