replace symptom tracker graphic with new one

--- a/portal/templates/gil/symptom-tracker.html
+++ b/portal/templates/gil/symptom-tracker.html
@@ -21,7 +21,7 @@
           <div class="accent-heading">Objective N<em>o</em>6: Custom Tools – Symptom Tracker</div>
           <h3 class="module__head">Monitoring and Tracking</h3>
           <p class="module__body">We’ve created a tool that asks you questions about your symptoms and side-effects throughout your prostate cancer journey from diagnosis through recovery.</p>
-          <p class="module__body">Every time you complete the tracking questionnaire it adds data to your graph, shows you how your experience compares with other men, and provides relevant tips.</p><img src="{{url_for('static', filename='img/sample-graph@2x.png') }}">
+          <p class="module__body">Every time you complete the tracking questionnaire it adds data to your graph, shows you how your experience compares with other men, and provides relevant tips.</p><img src="{{url_for('static', filename='img/Symptom_Tracker_Graph.png') }}">
           <div class="next-down">
             <p class="next-down__copy">We’ve created a tool to track your prostate cancer treatment side effects over time and provide personal guidance.</p>
           </div>
