add GIL footer to acquire data form

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1374,6 +1374,17 @@ div.right-panel {
 .core-data-procedure .profile-item-container {
   background: none;
   border: none;
+  padding: 0;
+}
+.core-data-procedure #profileProcedureContainer {
+  border-top: 1px solid #e8e7e7;
+  border-bottom: 1px solid #e8e7e7;
+  padding-top: 2em;
+}
+@media (min-width: 992px) {
+  .core-data-procedure {
+    max-width: 900px;
+  }
 }
 
 #mainDiv.profile .profile-item-edit-btn {
