--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1179,6 +1179,17 @@ h4.detail-title {
 .core-data-procedure .profile-item-container {
   background: none;
   border: none;
+  padding: 0;
+}
+.core-data-procedure #profileProcedureContainer {
+  border-top: 1px solid #e8e7e7;
+  border-bottom: 1px solid #e8e7e7;
+  padding-top: 2em;
+}
+@media (min-width: 992px) {
+  .core-data-procedure {
+    max-width: 900px;
+  }
 }
 #mainDiv.profile .profile-item-edit-btn:hover,
 #mainDiv.profile .profile-item-edit-btn:active,
