--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1471,7 +1471,18 @@ div.right-panel {
 .core-data-procedure .profile-item-container {
   background: none;
   border: none;
+  padding: 0;
 }
+.core-data-procedure #profileProcedureContainer {
+  border-top: 1px solid #e8e7e7;
+  border-bottom: 1px solid #e8e7e7;
+  padding-top: 2em;
+}
+@media (min-width: 992px) {
+  .core-data-procedure {
+    max-width: 900px;
+  }
+ }
 .profile-item-title {
   color: @sectionTitleColor;
   margin-bottom: 1.5em;
