--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -253,7 +253,7 @@ $(document).ready(function(){
                         'family':$.trim($('input[name=lastname]').val())
                     };
                     _demoArray['birthDate'] = $('input[name=birthDate]').val();
-
+                    
                     _demoArray['telecom'] = [];
 
                     var emailVal = $.trim($('input[name=email]').val());
@@ -296,6 +296,7 @@ $(document).ready(function(){
                     }).catch(function(error) {
                         errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
                         if (errorMessage != '') $('#serviceErrorMsg').html('<small>Server processing error: ' + errorMessage + '</small>').fadeIn();
+                        tnthAjax.reportError(_userId, "{{url_for('patients.patient_profile_create')}}", errorMessage, true);
                         $("#updateProfile").attr("disabled", false);
                     });
 
@@ -304,6 +305,7 @@ $(document).ready(function(){
                     //console.log('error: ' + error);
                     errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
                     if (errorMessage != '') $('#serviceErrorMsg').html('<small>Server processing error: ' + errorMessage + '</small>').fadeIn();
+                    tnthAjax.reportError(_userId, "{{url_for('patients.patient_profile_create')}}", errorMessage, true);
                     $("#updateProfile").attr("disabled", false);
                 });
 
@@ -325,6 +327,8 @@ $(document).ready(function(){
                 resolve(data);
             }).fail(function(xhr) {
                 errorMessage = 'Error processing request: ' + apiUrl;
+                errorMessage += "\nstatus: " + xhr.status;
+                errorMessage +="\nresponse text: " + $.trim(xhr.responseText)
                 console.log(requestData);
                 console.log(errorMessage);
                 console.log("response Text: " + xhr.responseText);
